--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-typed-mixins": "^0.2.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
